next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN branch, may never be released):
----------------------------------------------------


Version 4.10.5 (2009-07-23)
---------------------------

- Changing imagepath and imageurl no longer allowed via URL (#1836)

- New fix for incomplete CVE-2009-0840 security fix made in 4.10.4 (#2943)

Version 4.10.4 (2009-03-26)
---------------------------

- Improved security relative to untrusted directories and mapfiles (RFC 56)

- Fixed several security issues found in an audit of the CGI application (#2939, #2941, #2942, #2943, #2944)

- Fixed java and csharp Makefile.in to use -lmapserver instead of -lmap
  (side-effect of #2150)

- Fix extremely slow resampling problem in WCS (#1944)


Version 4.10.3 (2007-08-22)
---------------------------

- Fixed XSS vulnerabilities (#2256)

- Fixed possible buffer overflow in template processing (#2252)

- Rename libmap.a to libmapserver.a for commonality with 
  libmapserver.so (#2150)

- Fixed size of output buffer in msGetEncodedString() (#2132)

- SOS : backport fixes related to large xml outputs (#1938, #2146)

- WCS : Fixed resampling/reprojecting for tileindex datasets (#2180)

Version 4.10.2 (2007-05-07)
---------------------------

- SVG : Polygons should not be filled if color is not given (#2055)

- WMS : fixed request with a BBOX and and SLD containing Filter 
  encoding (#2079)

- Argument sequence wrong in msProjectRect calls in ogc filter (#2082)

- when reading an SLD, sequence of classes is reversed (#1925)

- Support for embedding manifests as resources for the VS2005 builds.(bug 2048)

- Changed OGRLayerGetAutoStyle not to pass NULL pointer to GetRGBFromString 
  causing access violation (bug 1950).
