@@ -13,6 +13,13 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN branch, may never be released):
 ----------------------------------------------------
 
+- Disabled some insecure (and potentially exploitable) mapserv command-line
+  debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
+  can be used to re-enable them for devs who really cannot get away without
+  them and who understand the potential security risk (not recommended for 
+  production servers or those who don't understand the security implications).
+
+- Fixed possible buffer overflow in msTmpFile() (#3484)
 
 Version 4.10.5 (2009-07-23)
 ---------------------------
